Add endpoint status reporting
